--- a/src/lt/2021-02/02/04.md
+++ b/src/lt/2021-02/02/04.md
@@ -3,7 +3,7 @@ title:  Sandora su Abromu
 date:   06/04/2021
 ---
 
-*„Laiminsiu tave laiminančius ir keiksiu tave keikiančius; visos žemės gentys ras tavyje palaiminimą.“ (Pr 12, 3)
+„Laiminsiu tave laiminančius ir keiksiu tave keikiančius; visos žemės gentys ras tavyje palaiminimą.“ (Pr 12, 3)
 
 `3. Perskaitykite Pr 12, 1–3. Įvardykite konkrečius pažadus, kuriuos Dievas davė Abromui.`
 														
